hphp/test/slow/func-ptr/bad-func.php.expectf
int(1)
classMeth{
    class(A)
    function(f1)
}
int(3)

Fatal error: calling an ill-formed function pointer without resolved class/object pointer in %s/test/slow/func-ptr/bad-func.php on line 15
